--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+Python>=3.7
 matplotlib==3.8.2
 numpy==1.26.4
 pandas==2.2.0
 scikit_learn==1.4.0
 tensorflow==2.15.0
 tensorflow_macos==2.15.0
+setuptools==69.1.0
+wheel==0.42.0
